# LACS_3

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
Include/: hardware_config.h  motor_control.h  ota.h  storage.h  sun_tracking.h  web_server.h
main/: CMakeLists.txt  main.c
source/: hardware_config.c  motor_control.c  ota.c  storage.c  sun_tracking.c  web_server.c
