idf_component_register(
    SRCS 
        "main.c"
        "../source/hardware_config.c"
        "../source/motor_control.c"
        "../source/sun_tracking.c"
        "../source/storage.c"
        "../source/ota.c"
        "../source/web_server.c"
    INCLUDE_DIRS 
        "."
        "../Include"
    REQUIRES
        esp_eth
        esp_netif
        esp_http_server
        nvs_flash
        driver
        freertos
        esp_timer
        spi_flash
        esp_wifi
        esp_https_server
        app_update
        esp_system
        lwip
    PRIV_REQUIRES
        mqtt
)